# rust-gpx-reader

./: .gitignore  Cargo.toml  Readme.md  gpx_reader.rs
src/: bitbuffer.rs  error.rs  gpx.rs  gpx_reader.rs  lib.rs  main.rs
src/gpx/: mod.rs
src/legacy/: gp3_reader.rs  gp4_reader.rs  gp5_reader.rs  gp_base.rs  io_reader.rs  mod.rs  song.rs  version.rs
test_data/: Iron Maiden - Fear Of The Dark (Pro).gp4
