[package]
name = "gpx_reader"
version = "0.0.3"
authors = [ "Andrii Dmytrenko <refresh.xss@gmail.com>" ]
description = "Guitar Pro GPX file format parser"
license = "MIT/BSD-2-Clause"

[[bin]]
name = "gpx_reader"
path = "src/bin/gpx_reader.rs"

[[bin]]
name = "gp_reader"
path = "src/bin/gp_reader.rs"

[lib]
name = "guitar_tabs"
path = "src/lib.rs"

[features]
autodetect_encoding = ["uchardet"]

[dependencies]
rustc-serialize = "*"
log = "*"
env_logger = "*"
byteorder = "*"
encoding = "0.2"
uchardet = { version = "*", optional = true }
error-chain = "*"
enum_primitive = "*"
